# c_henon_map

./: .gitignore  .gitmodules  MANIFEST.in  README.md  c_henon_map.cpp  henon_for_frederik.ipynb  henon_map.py  setup.py
cpu_henon_map/: CMakeLists.txt  setup.py
cpu_henon_map/cpu_henon_map/: wrapper.py
cpu_henon_map/src/: bindings.cpp  c_henon_map.h
gpu_henon_map/: CMakeLists.txt  setup.py
gpu_henon_map/gpu_henon_map/: __init__.py  wrapper.py
gpu_henon_map/src/: c_henon_map.cu  gpu_bindings.cpp
henon_map/: __init__.py  cpu_henon_core.py  gpu_henon_core.py  wrapper.py
numba/: cpu_henon_core.py  henon_tools.py
src/: bindings.cpp  c_henon_map.cpp  c_henon_map.h
